Added flags which allow running model checking